nginx-ingress-dal10.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: registry.ng.bluemix.net/takara/web:v3
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  tls:
  - hosts:
    - mycluster2-658797.us-south.containers.mybluemix.net
    secretName: mycluster2-658797
  rules:
  - host: mycluster2-658797.us-south.containers.mybluemix.net
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-svc
          servicePort: 80
